# ux-przeciwko-niewoli-Billa-Gatesa

./: CMakeCache.txt  CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  SwagBall.cpp  SwagBall.h  main.cpp  questionspl.csv  scenariusz.txt
SFML/: Config.hpp.gch  GpuPreference.hpp.gch  Main.hpp.gch
